--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
     <body>
-        TBD
+        <h1>BlackSwan</h1>
+        <p><b>Celem projektu jest stworzenie systemu wykonawczego umożliwiającego łatwe tworzenie, trenowanie i testowanie modeli AI handlujących na giełdzie i późniejsze integrowanie ich ze światem rzeczywistym.</b></p>
+        <p>Repozytoria:</p>
+        <ul>
+            <li><a href="https://dagshub.com/hamsterkmak/black-swan-experiments">https://dagshub.com/hamsterkmak/black-swan-experiments</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanPriceEmitter">https://github.com/cloudjubei/BlackSwanPriceEmitter</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanSignalEmitter">https://github.com/cloudjubei/BlackSwanSignalEmitter</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanTradingBot">https://github.com/cloudjubei/BlackSwanTradingBot</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanAIModelEmitter">https://github.com/cloudjubei/BlackSwanAIModelEmitter</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanAggregator">https://github.com/cloudjubei/BlackSwanAggregator</a></li>
+            <li><a href="https://github.com/cloudjubei/BlackSwanCommons">https://github.com/cloudjubei/BlackSwanCommons</a></li>
+            <li><a href="https://github.com/KamilMatejuk/BlackSwanFrontend">https://github.com/KamilMatejuk/BlackSwanFrontend</a></li>
+            <li><a href="https://github.com/KamilMatejuk/BlackSwanXTBEmitter">https://github.com/KamilMatejuk/BlackSwanXTBEmitter</a></li>
+            <li><a href="https://github.com/KamilMatejuk/BlackSwanBackend">https://github.com/KamilMatejuk/BlackSwanBackend</a></li>
+            <li><a href="https://github.com/KamilMatejuk/BlackSwanBacktester">https://github.com/KamilMatejuk/BlackSwanBacktester</a></li>
+            <li><a href="https://github.com/KamilMatejuk/BlackSwanLearner">https://github.com/KamilMatejuk/BlackSwanLearner</a></li>
+        </ul>
     </body>
 </html>
