added research paper link

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
             <li><a href="https://github.com/KamilMatejuk/BlackSwanBacktester">https://github.com/KamilMatejuk/BlackSwanBacktester</a></li>
             <li><a href="https://github.com/KamilMatejuk/BlackSwanLearner">https://github.com/KamilMatejuk/BlackSwanLearner</a></li>
         </ul>
+        <p>Artykuły naukowe:</p>
+        <ul>
+            <li><a href="https://drive.google.com/file/d/1H06izLFODWf_vmXgOKzhQgNzadS1ARR_/view?usp=sharing">Causality of social media sentiment and other metrics on stock market prices</a></li>
+        </ul>
     </body>
 </html>
